src/styles/global.css
/* ... */
.ReactModalPortal header, .ReactModalPortal footer, .ReactModalPortal div.toppad, .ReactModalPortal .fluff, .ReactModalPortal .audio, .ReactModalPortal .headline{
display: none !important;
}

.ReactModalPortal div.toppad{border:0px solid blue !important; display: none !important;}

.ReactModalPortal {margin:0 3% !important; width:80% !important;}

.ReactModal__Overlay{background-color:transparent !important;   background: rgba(0,0,0,0.90);
  backdrop-filter: blur(22px);}

.ReactModal__Content{padding:0 !important; background:transparent !important; margin:0 auto ; overflow: hidden !important; border:none !important; box-shadow: 0px 1px 10px 10px rgba(0, 0, 0, 0.5); box-shadow: none !important;}


.ReactModal__Body--open {
  overflow: hidden;
  position: fixed;
  width: 100%;
  height: 100%;
  overflow-y: hidden !important;
}

.ReactModal__Body--open {
  overflow-y: hidden !important;
}




/* .section.nft .listingContainerStyle a:first-child:after, section.nft .listingContainerStyle a:nth-child(11n-8):after{
  display: none !important;
} */

section{height:100% !important; padding-bottom:3rem;}

.audio{
  position:absolute;
   top:10px; right:10px; z-index:1;
   text-align: center;
   display: flex;
   align-items: center;
   color:#fff;
}
/* .audio:before{
  position:absolute;
  top:100px;
  width:200px;
  content: ("Audio Controls") ;
  display:block  !important;
  border:0px solid red  !important;

} */


.listingContainerStyle {
  display: grid;
  grid-template-columns: var(--product-grid);
  place-items: center;
  gap: var(--size-gutter-raw);
  padding: 0 var(--size-gutter-raw);
}

.listingContainerStyle a:first-child, .listingContainerStyle a:nth-child(11n-8){
  border:0px solid red !important;
  position:relative;
  }
  
 /* .listingContainerStyle a:first-child:after, .listingContainerStyle a:nth-child(11n-8):after{
  
    content: " Just Sold ";
    color:#222 !important;
    pointer-events: none !important;
    display:block  !important;
    border:0px solid red  !important;
    position:absolute;
    top:0;
    right:0;
    z-index: 0;
    background:var(--primary-color);
    color:#fff !important;
    padding:0 1rem;
    filter: drop-shadow(0px 0px 10px rgba(0,0,0,.9));
    justify-content: center;
    text-align:center;
  } */

  .nft .listingContainerStyle a:first-child:after, .nft .listingContainerStyle a:nth-child(11n-8):after{
    /* border:4px solid red !important; */
    display:none !important;
    }



    .spacer33{height:8vh;}
    .spacer66{height:33vh;}
    .spacer99{height:99vh;}

/* .contact-form {
  margin-top: 36px;
} */

  /* label {
    color: #fff;
  } */

    .description {
    line-height: 1.5;
  }

    .wrapper {
    max-width: 768px;
    margin: 0 auto;
  }

  .contact-form input,
  textarea {
    width: 100%;
    max-width: 100%;
    margin: 0 0;
    font-size: 18px;
    font-weight: 600;
    background:#333;
    color:#fff !important;
    border:1px solid #666 !important;
    padding:10px !important;
    border-radius:8px;
    /* background:rgba(145, 26, 103, 0.829) !important; */
    opacity: .5;
  }
  /* textarea:focus{border-color:2px solid palevioletred;} */

  textarea {
    min-height: 200px;
  }

  input:focus, textarea:focus { outline:2px solid var(--primary) ! important;  border-radius: 8px !important; } 
  
  .contact-form p{margin-bottom:0;}


  
  .commentbox {color:var(--primary) !important; border:0px solid red; border-radius: 12px; background:#ccc;}


body{overflow-x: hidden; min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

[aria-roledescription]{z-index:0 !important;}
.react-slideshow-container .nav{  font-size: 40px !important;}

.drop-shadow {
  filter: drop-shadow(0px 0px 10px rgba(0,0,0,.5));
  }
.box-shadow {box-shadow: 0px 0px 10px rgba(0,0,0,.5)}


.gatsby-image-wrapper img {
  margin:0 auto !important;
}

.social-icons {
  font-size: 3rem;
  display: flex;
  gap: 16px;
  margin-top: 30px;
}
.social span{display: none;}

#sidebarMenu {
  height: 75vh;
  position: fixed;
  z-index:2;
  right: 0;
  top:0;
  display:flex;
  flex-direction: column;
  justify-content: flex-end;
  /* width: 250px; */
  padding:75vh 0 0 0;
  transform: translateX(100vw);
  transition: transform 250ms ease-in-out;
}
.sidebarMenuInner{
  margin:0 0 0 0;
  padding:75vh 0 0 0;
  /* border-top: 1px solid rgba(255, 255, 255, 0.10); */
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-color:#111;
  background: linear-gradient(180deg, #333 1%, #111 80%);
  border-left:1px solid rgba(255, 255, 255, 0.10);
  border-radius: 0 0 0 12px;
  min-width: 200px;

}
.sidebarMenuInner li{
  list-style: none;
  color: #fff;
  text-transform: uppercase;
  font-weight: bold;
  padding: 5px 20px;
  cursor: pointer;
  border-bottom: 1px solid rgba(255, 255, 255, 0.10);
}
.sidebarMenuInner li span{
  display: block;
  font-size: 14px;
  /* color: rgba(255, 255, 255, 0.70); */
}
.sidebarMenuInner li a{
  /* color: #fff; */
  text-transform: uppercase;
  font-weight: bold;
  cursor: pointer;
  text-decoration: none;
}
input[type="checkbox"]:checked ~ #sidebarMenu {
  transform: translateX(100%);
}



input[type=checkbox] {
  transition: all 0.3s;
  box-sizing: border-box;
  display: none;
}
.sidebarIconToggle {
  transition: all 0.3s;
  box-sizing: border-box;
  cursor: pointer;
  position: fixed;
  z-index: 4;
  top: 77vh;
  right: 50px;
  /* height: 100px;
  width: 100px; */
  color: #999;
  text-align: center;
  display: flex;
  flex-direction: column;
justify-self:flex-start;
border:0px solid white;
filter: drop-shadow(1px 1px 1px var(--primary));;
  text-shadow:1px 1px 0px #000;
}

.sidebarIconToggle:hover{
  color: var(--primary);
  filter: drop-shadow(0px 0px 10px var(--primary-color));
  text-shadow:1px 1px 0px #000;
}
/* ... */

